[gd_scene load_steps=7 format=3 uid="uid://ddow231ohkcpj"]

[ext_resource type="Script" path="res://Scenes/LoopControls/loop_controls.gd" id="1_ovjla"]
[ext_resource type="Script" path="res://Scripts/in.gd" id="2_bvstw"]
[ext_resource type="Texture2D" uid="uid://cb703kraugp85" path="res://Textures/S32.svg" id="3_lwg4x"]
[ext_resource type="Texture2D" uid="uid://cnyl16jr7jd8g" path="res://Textures/Dot.svg" id="4_ew67t"]
[ext_resource type="Script" path="res://Scripts/out.gd" id="5_y573l"]
[ext_resource type="Texture2D" uid="uid://bssf5wkfubmdu" path="res://Textures/PauseLarge.svg" id="6_5ywdx"]

[node name="LoopControls" type="Control"]
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 0.898958
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ovjla")
metadata/_edit_use_anchors_ = true

[node name="In" type="Control" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 26.0
offset_bottom = 288.0
grow_horizontal = 2
script = ExtResource("2_bvstw")

[node name="StrokeDurationLabel" type="Label" parent="In"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -303.5
offset_right = 303.5
offset_bottom = 77.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 56
text = "IN: OFF"

[node name="StrokeDurationSlider" type="NinePatchRect" parent="In"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -468.0
offset_top = 248.0
offset_right = -298.0
offset_bottom = 1184.0
grow_horizontal = 2
rotation = 4.71239
texture = ExtResource("3_lwg4x")
patch_margin_top = 80
patch_margin_bottom = 80

[node name="Slider" type="TextureRect" parent="In/StrokeDurationSlider"]
self_modulate = Color(0.858824, 0.439216, 0.576471, 1)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -69.0
offset_top = 16.0
offset_right = 69.0
offset_bottom = 154.0
grow_horizontal = 2
texture = ExtResource("4_ew67t")

[node name="SliderStop" type="TextureRect" parent="In/StrokeDurationSlider"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -68.9999
offset_top = 314.0
offset_right = 69.0001
offset_bottom = 452.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_ew67t")

[node name="AccelerationControls" type="HBoxContainer" parent="In"]
custom_minimum_size = Vector2(700, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -401.5
offset_top = 18.0
offset_right = 401.5
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 50
alignment = 1

[node name="Transition" type="OptionButton" parent="In/AccelerationControls"]
custom_minimum_size = Vector2(346, 0)
layout_mode = 2
size_flags_horizontal = 0
selected = 1
item_count = 8
popup/item_0/text = "Linear"
popup/item_1/text = "Sine"
popup/item_1/id = 1
popup/item_2/text = "Circ"
popup/item_2/id = 2
popup/item_3/text = "Expo"
popup/item_3/id = 3
popup/item_4/text = "Quad"
popup/item_4/id = 4
popup/item_5/text = "Cubic"
popup/item_5/id = 5
popup/item_6/text = "Quart"
popup/item_6/id = 6
popup/item_7/text = "Quint"
popup/item_7/id = 7

[node name="Easing" type="OptionButton" parent="In/AccelerationControls"]
layout_mode = 2
size_flags_horizontal = 8
selected = 2
item_count = 4
popup/item_0/text = "Ease In"
popup/item_1/text = "Ease Out"
popup/item_1/id = 1
popup/item_2/text = "Ease In/Out"
popup/item_2/id = 2
popup/item_3/text = "Ease Out/In"
popup/item_3/id = 3

[node name="Out" type="Control" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 542.0
offset_bottom = 804.0
grow_horizontal = 2
script = ExtResource("5_y573l")

[node name="StrokeDurationLabel" type="Label" parent="Out"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -303.5
offset_right = 303.5
offset_bottom = 77.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 56
text = "OUT: OFF"

[node name="StrokeDurationSlider" type="NinePatchRect" parent="Out"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -468.0
offset_top = 248.0
offset_right = -298.0
offset_bottom = 1184.0
grow_horizontal = 2
rotation = 4.71239
texture = ExtResource("3_lwg4x")
patch_margin_top = 80
patch_margin_bottom = 80

[node name="Slider" type="TextureRect" parent="Out/StrokeDurationSlider"]
self_modulate = Color(0.356863, 0.423529, 0.643137, 1)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -69.0
offset_top = 16.0
offset_right = 69.0
offset_bottom = 154.0
grow_horizontal = 2
texture = ExtResource("4_ew67t")

[node name="SliderStop" type="TextureRect" parent="Out/StrokeDurationSlider"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -68.9999
offset_top = 314.0
offset_right = 69.0001
offset_bottom = 452.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_ew67t")

[node name="AccelerationControls" type="HBoxContainer" parent="Out"]
custom_minimum_size = Vector2(700, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -401.5
offset_top = 18.0
offset_right = 401.5
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 50
alignment = 1

[node name="Transition" type="OptionButton" parent="Out/AccelerationControls"]
custom_minimum_size = Vector2(346, 0)
layout_mode = 2
size_flags_horizontal = 0
selected = 1
item_count = 8
popup/item_0/text = "Linear"
popup/item_1/text = "Sine"
popup/item_1/id = 1
popup/item_2/text = "Circ"
popup/item_2/id = 2
popup/item_3/text = "Expo"
popup/item_3/id = 3
popup/item_4/text = "Quad"
popup/item_4/id = 4
popup/item_5/text = "Cubic"
popup/item_5/id = 5
popup/item_6/text = "Quart"
popup/item_6/id = 6
popup/item_7/text = "Quint"
popup/item_7/id = 7

[node name="Easing" type="OptionButton" parent="Out/AccelerationControls"]
layout_mode = 2
size_flags_horizontal = 8
selected = 2
item_count = 4
popup/item_0/text = "Ease In"
popup/item_1/text = "Ease Out"
popup/item_1/id = 1
popup/item_2/text = "Ease In/Out"
popup/item_2/id = 2
popup/item_3/text = "Ease Out/In"
popup/item_3/id = 3

[node name="LinkSpeedSliders" type="Button" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -57.0
offset_top = 421.0
offset_right = 54.0
offset_bottom = 521.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 54
toggle_mode = true
button_pressed = true

[node name="Label" type="Label" parent="LinkSpeedSliders"]
modulate = Color(0, 0.72549, 0.490196, 1)
layout_mode = 0
offset_left = 13.0
offset_top = 14.0
offset_right = 98.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 62
text = "ðŸ”—"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Line2D" type="Line2D" parent="."]
position = Vector2(0, 25.9997)

[node name="Pause" type="TextureRect" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.478431)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 231.5
offset_right = 150.0
offset_bottom = 690.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_5ywdx")

[node name="Control" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -383.0
offset_top = 131.0
offset_right = 383.0
offset_bottom = 743.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Tap" type="TextureButton" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 221.0
offset_top = 431.0
offset_right = 485.0
offset_bottom = 539.0
grow_horizontal = 2
alignment = 1

[node name="BPMText" type="TextEdit" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 60
text = "60"
placeholder_text = "60"

[node name="BPMSend" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Send
"

[connection signal="gui_input" from="In/StrokeDurationSlider/Slider" to="In" method="_on_slider_gui_input"]
[connection signal="item_selected" from="In/AccelerationControls/Transition" to="In" method="_on_transition_item_selected"]
[connection signal="item_selected" from="In/AccelerationControls/Easing" to="In" method="_on_easing_item_selected"]
[connection signal="gui_input" from="Out/StrokeDurationSlider/Slider" to="Out" method="_on_slider_gui_input"]
[connection signal="item_selected" from="Out/AccelerationControls/Transition" to="Out" method="_on_transition_item_selected"]
[connection signal="item_selected" from="Out/AccelerationControls/Easing" to="Out" method="_on_easing_item_selected"]
[connection signal="toggled" from="LinkSpeedSliders" to="." method="_on_link_speed_sliders_toggled"]
[connection signal="pressed" from="Control/Tap" to="." method="_on_tap_pressed"]
